Moved positioning and width. Multiple messages no longer overlap.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,10 +39,13 @@ header .title a:visited {
   margin: 8px;
 }
 
-.notice {
+#notices {
   position: fixed;
   top: 0;
-  right: 0;
+  width: 100%;
+}
+
+.notice {
   background: #f9ef8d;
   color: #000;
   margin: auto;
